apps/torrents/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
