apps/torrents/jackett/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - jackett.homie.e10n.me
  rules:
    - backendRefs:
        - name: jackett
          namespace: torrents
          port: 80
